--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -49,10 +49,10 @@
                             <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a></li>
-                                    <li><a href="/clinica/servicios"><span class="text-middle">Servicios</span></a>
+                                    <li><a href="#"><span class="text-middle">Servicios</span></a>
                                         <ul class="rd-navbar-dropdown2">
-                                            <li><a href="#"><span class="text-middle">Odontología</span></a></li>
-                                            <li><a href="#"><span class="text-middle">Imagenología</span></a></li>                       
+                                            <li><a href="/clinica/servicios/odontologia"><span class="text-middle">Odontología</span></a></li>
+                                            <li><a href="/clinica/servicios/imagenologia"><span class="text-middle">Imagenología</span></a></li>                       
                                         </ul>
                                     </li>
                                     <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a></li>
