--- a/web/templates/clinica/servicios.html
+++ b/web/templates/clinica/servicios.html
@@ -29,7 +29,7 @@
         <!-- Page Head-->
         <header class="page-head">
             <!-- RD Navbar minimal-->
-            {% block navegation %}{% include 'carrera/navegation.html' %}{% endblock %}
+            {% block navegation %}{% include 'navegation.html' %}{% endblock %}
         </header>
         <!-- Page Contents-->
         <main class="page-content">
