Se agrega admision

--- a/web/templates/carrera/admision.html
+++ b/web/templates/carrera/admision.html
@@ -1,4 +1,4 @@
-{% extends "carrera/base.html" %}
+{% extends "carrera/basecontenido.html" %}
 {% load staticfiles %}
 
 {% block title %}Admisión{% endblock %}
