--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -45,7 +45,7 @@
                                     <li><a href="/carrera/perfil"><span class="text-middle">Perfil Profesional</span></a></li>
                                 </ul>
                             </li>
-                            <li><a href="#"><span>Admisón</span></a></li>
+                            <li class="{% active_menu '/admision' %}"><a href="/carrera/admision"><span>Admisión</span></a></li>
                             <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a></li>
@@ -60,7 +60,7 @@
                                     <li><a href="/clinica/paciente"><span class="text-middle">Paciente</span></a></li>                                                 
                                 </ul>  
                             </li>
-                            <li><a href="#"><span>Contacto</span></a></li>
+                            <li class="{% active_menu '/contacto' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
                 </div>
