Se mejora la seccion mision - vision (objetivos)

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -40,7 +40,7 @@
                             <li class="{% active_menu '/carrera' %}"><a href="#"><span>Quienes Somos</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
-                                    <li><a href="/carrera/mision"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfil"><span class="text-middle">Perfil Profesional</span></a></li>
                                 </ul>
