--- a/template/site/index.html
+++ b/template/site/index.html
@@ -384,6 +384,40 @@
                     <img width="98%" height="auto" src="images/carrera/estructura_carrera.svg" alt="estructura" />
                 </div>
             </section>
+            <!-- Mision - Vision -->
+            <section>
+                <div class="shell">
+                    <div class="range range-xs-center range-sm-left">
+                        <div class="cell-xs-10 cell-sm-6 section-image-aside section-image-aside-right text-center text-sm-left">
+                            <div class="section-image-aside-img veil reveal-sm-block">
+                                <img width="100%" height="100%" src="images/carrera/mision.jpg" alt="mision" />
+                            </div>
+                            <div class="section-image-aside-body section-sm-bottom-66 section-sm-top-110 inset-md-right-93">
+                                <h3>Misión</h3>
+                                <hr class="divider divider-lg hr-sm-left-2 bg-java">
+                                <div class="offset-top-34 offset-md-top-60">
+                                    <p>La carrera de Odontología de la Universidad de La Serena tiene como misión aportar al mejoramiento de la realidad regional y nacional mediante la generación de conocimiento y la formación de profesionales competentes y socialmente responsables.</p>
+                                    <p>Para ello promueve el desarrollo de una docencia de calidad, caracterizada por la integralidad desde lo técnico y lo humano, para el ejercicio criterioso y ético de la profesión de manera individual y colegiada.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="range range-xs-center range-sm-right offset-top-0">
+                        <div class="cell-xs-10 cell-sm-6 section-image-aside section-image-aside-left text-center text-sm-left">
+                            <div class="section-image-aside-img veil reveal-sm-block">
+                                <img width="100%" height="100%" src="images/carrera/vision.jpg" alt="vision" />
+                            </div>
+                            <div class="section-image-aside-body offset-top-66 offset-sm-top-0 section-sm-bottom-66 section-sm-top-110 inset-md-left-93">
+                                <h3>Visión</h3>
+                                <hr class="divider divider-lg hr-sm-left-2 bg-java">
+                                <div class="offset-top-34 offset-md-top-60">
+                                    <p>Constituirse en el referente de la zona norte del país para la generación de conocimiento y formación de cirujanos dentistas tanto en pregrado como posgrado, siendo reconocida por su vinculación con el medio.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Google map-->
             <!-- RD Google Map-->
             <!--
