--- a/web/templates/carrera/contenido.html
+++ b/web/templates/carrera/contenido.html
@@ -33,30 +33,30 @@
         </header>
         <!-- Page Contents-->
         <main class="page-content">
-              <!-- Modern Breadcrumbs-->
-              <section class="breadcrumb-modern context-dark text-md-left">
+            <!-- Modern Breadcrumbs-->
+            <section class="breadcrumb-modern context-dark text-md-left">
                 <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-                  <h1>{{ contenido.seccion }}</h1>
-                  <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-                    <li><a href="/carrera">Carrera</a></li>
-                    <li>{{ contenido.seccion }}</li>
-                  </ul>
+                    <h1>{{ contenido.seccion }}</h1>
+                    <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
+                        <li><a href="/carrera">Carrera</a></li>
+                        <li>{{ contenido.seccion }}</li>
+                    </ul>
                 </div>
-              </section>
-              <!-- Page Content-->
-              <main class="page-content">
+            </section>
+            <!-- Page Content-->
+            <main class="page-content">
                 <!-- Our team-->
-                <section class="section-98 section-sm-110">
-                  <div class="shell">
-                    {% autoescape off %}{{ contenido.texto }}{% endautoescape %}
-                  </div>
+                <section class="section-sm-50">
+                    <div class="shell">
+                        {% autoescape off %}{{ contenido.texto }}{% endautoescape %}
+                    </div>
                 </section>
-              </main>
+            </main>
         </main>
         <!-- Page Footer-->
         <!-- Default footer-->
         <footer class="section-relative section-34 section-md-66 page-footer bg-lighter context-light" id="footer-principal">
-                {% block footer %}{% include 'carrera/footer.html' %}{% endblock %}
+            {% block footer %}{% include 'carrera/footer.html' %}{% endblock %}
         </footer>
     </div>
     <!-- Java script-->
