Se mejora la pagina de contacto

--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -13,7 +13,7 @@
     </div>
 </section>
 <!-- Page Content-->
-<main class="page-content section-top-98 section-sm-top-110">
+<main class="page-content section-top-98 section-sm-top-50">
     <!-- Get In Touch-->
     <section>
         <div class="shell">
@@ -21,7 +21,7 @@
                 <div class="cell-sm-9 cell-md-8 cell-lg-12">
                     <div class="range">
                         <div class="cell-lg-8 text-left">
-                            <h3>Contáctenos</h3>
+                            <h3>Envíanos tu consulta</h3>
                             <hr class="divider divider-lg bg-java hr-left-0 hr-sm-left-2">
                             <div class="offset-top-66">
                                 <p>
@@ -95,7 +95,7 @@
                                     </div>
                                 </div>
                                 <div class="offset-top-60">
-                                    <h6>OPENING hours</h6>
+                                    <h6>Horarios de atención</h6>
                                     <hr class="text-subline">
                                     <div class="offset-top-20">
                                         <div class="unit unit-horizontal unit-spacing-xxs p">
@@ -103,9 +103,9 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-calendar-clock text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <div>Mon–Fri: 8:00am–6:00pm</div>
-                                                <div>Sat: 9:00am–3:00pm</div>
-                                                <div>Sun: 10:00am–2:00pm</div>
+                                                <div>Lu-Vi: 8:00hr–18:00hr</div>
+                                                <div>Sab: 9:00hr–14:00hr</div>
+                                                <div>Dom: cerrado</div>
                                             </div>
                                         </div>
                                     </div>
@@ -118,7 +118,10 @@
                                             <div class="unit-left">
                                                 <div class="icon icon-xxs text-middle mdi mdi-phone text-primary"></div>
                                             </div>
-                                            <div class="unit-body"><a href="callto:#" class="text-dark reveal-block">1-800-1234-567</a><a href="callto:#" class="text-dark reveal-block">1-800-7654-876</a></div>
+                                            <div class="unit-body">
+                                                <a href="callto:#" class="text-dark reveal-block">1-800-1234-567</a>
+                                                <a href="callto:#" class="text-dark reveal-block">1-800-7654-876</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -138,15 +141,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="range range-xs-center">
+                    <div class="cell-sm-9 cell-md-8 cell-lg-12">
+                        <div class="range">
+                            <div class="cell-lg-8 text-left">
+                                <h3>Nuestra ubicación</h3>
+                                <hr class="divider divider-lg bg-java hr-left-0 hr-sm-left-2">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cell-lg-4 text-left offset-top-66 offset-lg-top-0"></div>
+                </div>
             </div>
         </div>
-        <div class="offset-top-110">
+        <div class="offset-top-50">
             <!-- RD Google Map-->
             <div class="rd-google-map">
-                <div id="rd-google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" data-styles='[{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"geometry.fill","stylers":[{"visibility":"on"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#b4d4e1"},{"visibility":"on"}]}]' class="rd-google-map__model"></div>
+                <div id="rd-google-map" data-zoom="17" data-x="-71.2441861" data-y="-29.9098923" data-styles='[{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"geometry.fill","stylers":[{"visibility":"on"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#b4d4e1"},{"visibility":"on"}]}]' class="rd-google-map__model"></div>
                 <ul class="rd-google-map__locations">
-                    <li data-x="-73.9874068" data-y="40.643180">
-                        <p>9870 St Vincent Place, Glasgow, DC 45 Fr 45</p>
+                    <li data-x="-71.2441861" data-y="-29.9098923">
+                        <p>Avenida Juan Cisternas 2283 La Serena</p>
                     </li>
                 </ul>
             </div>
